Overflow issue on Home page resolved for small screens

--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -21,6 +21,7 @@
     justify-content: space-between;
     align-items: center;
     z-index: 9999;
+    overflow: hidden;
 
     .arrow {
       flex: 1;
@@ -67,12 +68,12 @@
       cursor: pointer;
       padding: 30px;
 
-      @include md{
+      @include md {
         padding: 20px;
         font-size: 30px;
       }
 
-      @include sm{
+      @include sm {
         font-size: 20px;
       }
     }
