--- a/src/index.scss
+++ b/src/index.scss
@@ -33,5 +33,4 @@ a {
 
 body {
   font-family: 'Lato', sans-serif;
-  overflow: hidden;
 }
