--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -3,6 +3,7 @@
 .homePage {
   display: flex;
   height: 100%;
+  overflow: hidden;
 
   .textContainer {
     flex: 3;
@@ -13,7 +14,7 @@
       padding-right: 100px;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       gap: 36px;
 
       @include md {
@@ -21,7 +22,6 @@
       }
 
       @include sm {
-        justify-content: flex-start;
         padding-right: 0;
       }
 
@@ -57,7 +57,7 @@
     flex: 2;
     background-color: #fcf5f3;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 
     @include md {
